# wordlist

./: Cargo.toml
data/UKACD17/: all_words.json
data/nytimes/: all_words.json
data/websters/: all_words.json
src/: main.rs
